--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -3,6 +3,6 @@ Why were `rounder()` and `measureRain()` able to use switch cases, while
 functions like `happyBirthdayPet()`, `funTypes` were not? Do you prefer `measureRain()` and `rounder()` as `if/else` or `switch` statements?
 
 # Answer
-
+Thw switch case checks for a certain value, while the if/else can check for a condition like using comparison operators. I feel like the switch cases are more limiting, but it's good gor simple and clear situation,  while if/else function is more versatile. So, it really depends on different situations.
 
 # Teacher Feedback
