--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -6,3 +6,7 @@ functions like `happyBirthdayPet()`, `funTypes` were not? Do you prefer `measure
 Thw switch case checks for a certain value, while the if/else can check for a condition like using comparison operators. I feel like the switch cases are more limiting, but it's good gor simple and clear situation,  while if/else function is more versatile. So, it really depends on different situations.
 
 # Teacher Feedback
+
+You are correct in that switch cases are based on a specific entry and we are then just comparing values, however the work around is to use true and then you could use comparisons there too!
+
+Score: 3/3
